--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@earlorg/eslint-config": "^1.5.24",
     "@sentry/node": "^7.28.1",
     "@types/body-parser": "^1.19.2",
+    "@types/jest": "^29.2.5",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "babel-loader": "^9.1.2",
